fix footer on mobile

--- a/src/static/css/footer.css
+++ b/src/static/css/footer.css
@@ -41,7 +41,7 @@
   }
 
   .footer-module__lower {
-    margin-top: 32px;
+    margin-top: 64px;
     margin-bottom: 64px;
   }
 }
